Gitignore emacs crud

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ vagrant_ansible_inventory_production
 vagrant_ansible_inventory_production2
 config/database.yml
 coverage
+
+# emacs crud
+*~
+*#
+.#*
