--- a/config/resque_workers.yml
+++ b/config/resque_workers.yml
@@ -1,20 +1,20 @@
-resque_worker_1:
+worker_1:
   queues: 'runs'
-resque_worker_2:
+worker_2:
   queues: 'runs'
-resque_worker_3:
+worker_3:
   queues: 'runs'
-resque_worker_4:
+worker_4:
   queues: 'runs'
-resque_worker_5:
+worker_5:
   queues: 'runs'
-resque_worker_6:
+worker_6:
   queues: 'runs'
-resque_worker_7:
+worker_7:
   queues: 'runs'
-resque_worker_8:
+worker_8:
   queues: 'runs'
-resque_worker_9:
+worker_9:
   queues: 'runs'
-resque_worker_10:
+worker_10:
   queues: 'runs'
